--- a/new-website/tsconfig.json
+++ b/new-website/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "astro/tsconfigs/strict",
   "files": ["tailwind.config.ts"],
+  "module": "esnext",
+  "target": "ES2020",
+  "moduleResolution": "node",
   "include": [
     ".astro/types.d.ts",
     "**/*",
@@ -8,7 +11,8 @@
     "types"
   ],
   "exclude": [
-    "dist"
+    "dist",
+    "node_modules"
   ],
   "compilerOptions": {
     "jsx": "react-jsx",
