--- a/new-website/package.json
+++ b/new-website/package.json
@@ -5,8 +5,8 @@
     "predeploy": "npm run build && cp CNAME build/CNAME",
     "deploy": "gh-pages -d build",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint": "eslint \"src/**/*.{ts,tsx}\"",
-    "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "lint": "eslint \"src/**/*.{ts,tsx,astro}\"",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx,astro}\" --fix",
     "tsc": "tsc",
     "dev": "astro dev",
     "build": "astro build",
@@ -45,6 +45,7 @@
     "eslint": "^8.57.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
@@ -63,10 +64,10 @@
     "rimraf": "^5.0.7",
     "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.4",
+    "typescript": "^5.7.3",
     "unplugin-inject-preload": "^2.0.3",
     "vite": "^5.2.0",
     "vite-plugin-checker": "^0.6.4",
-    "typescript": "^5.7.3",
     "vite-plugin-svgr": "^4.2.0"
   },
   "husky": {
