--- a/new-website/package.json
+++ b/new-website/package.json
@@ -61,6 +61,7 @@
     "postcss-import": "^16.1.0",
     "postcss-preset-env": "^9.5.14",
     "prettier": "^3.3.1",
+    "prettier-plugin-astro": "^0.14.1",
     "rimraf": "^5.0.7",
     "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.4",
