feat: added full footer

--- a/new-website/tsconfig.json
+++ b/new-website/tsconfig.json
@@ -19,8 +19,9 @@
     "jsxImportSource": "react",
     "baseUrl": "./",
     "paths": {
-      "~/*": ["./src/react/*"],
+      "~/react/*": ["./src/react/*"],
       "~/assets/*": ["./src/assets/*"],
+      "~/constants/*": ["./src/constants/*"],
       "~/public/*": ["./public/*"],
     },
     "noEmit": true,
